# python-anglelib

./: .gitignore  .gitlab-ci.yml  .releaserc.yml  CHANGELOG.md  pyproject.toml
src/anglelib/: __init__.py  angle.py  radial.py  vecmath.py  wrap.py
src/anglelib/icosphere/: __init__.py  icosphere.py
test/: test_operators.py  test_range.py
