[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "anglelib"
version = "0.1.0"
description = "Angles in various convensions"
authors = ["Taishi Hashimoto <taishi.hashimoto@eiscat.se>"]
packages = [
    { include = "anglelib", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "*"
